<resources>
    <string name="app_name">I Am An Nitian</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!--============== Welcome Screen Strings =================-->
    <string name="login_or_signup">Log in or sign up</string>
    <string name="facebook">Continue with facebook</string>
    <string name="google">Continue with Google</string>
    <string name="join">Join The \nBiggest\nStudent Community</string>

    <!--============== Login Strings =================-->
    <string name="welcome">Welcome Back</string>
    <string name="welcome_login">Log In!</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email_phone_hint">Email or Phone</string>
    <string name="pass_hint">Password</string>
    <string name="pass_forg">forgot password?</string>
    <string name="not_have_account">Don\'t have an account?</string>

    <!--============== Signup Strings =================-->
    <string name="hello">Hello,</string>
    <string name="welcome_signup">Sign Up!</string>
    <string name="name_hint">User Name</string>
    <string name="email_hint">Email</string>
    <string name="signup_space">Sign Up</string>
    <string name="already_memeber">Already a member?</string>

    <!--============== Forgot Password Strings =================-->
    <string name="otp_hint">OTP</string>
    <string name="reset_heading">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="resend">Resend OTP</string>


    <!--============== Bottom Sheet Strings =================-->
    <string name="otp_sent">An OTP is sent to your email</string>
    <string name="continue_button">Continue</string>

    <!--========= Main Activity Strings ==========-->
    <string name="headline">Headlines</string>
    <string name="links">Useful Links</string>
    <string name="trending">Trending Now</string>
    <string name="news">News</string>
    <string name="blog">Blog</string>
    <string name="college">college</string>
    <string name="placement">Placement</string>
    <string name="ranking">Ranking</string>
    <string name="jossa">Jossa</string>
    <string name="read">Read</string>
    <string name="loading">We are loading the video for you</string>
    <string name="success_story_read">Read Inspirational Success Stories</string>

    <!--============== Splash Strings =================-->
    <string name="splash_msg">Connecting Nitians</string>

    <!--========= Content Description Strings ==========-->
    <string name="cnt_desp">NIT SXR</string>
    <string name="latest_news">Latest News</string>

    <!--========= Drawer Headers Strings ==========-->
    <string name="user_name">User Name</string>
    <string name="nit_name">College Name</string>

    <!--========= Facebook Login Strings ==========-->
    <string name="facebook_app_id">576919333023662</string>
    <string name="fb_login_protocol_scheme">fb576919333023662</string>

    <!--============== App Info Strings =================-->
    <string name="copy">all rights reserved</string>
    <string name="copy_x">2020 I Am An Nitian</string>
    <string name="version">Version 1.0</string>

    <!--============== Video caption Strings =================-->
    <string name="jalandhar_desp">A glimpse of campus | Dr. B. R. National Institute of Technology Jalandhar</string>
    <string name="nitsri_desp">NIT Srinagar | One of the most beautiful college campus of India</string>
    <string name="agartala_desp">National Institute Of Technology Agartala | A campus tour</string>

    <!--============== About Strings =================-->
    <string name="description">This line is not just a combination of some words but resembles the feeling of pride
in each one of us that we convey to this world that I AM AN NITian!
Keeping this same feeling of pride and oneness, a Facebook page with same name and zeal 
was founded about 2 years ago with an objective to bring all the NITians together and 
provide them a platform on social media where active exchange of ideas/news/information could take place.
Founded by an NITian himself at NIT Silchar, this page became one of the fastest growing and liked page on Facebook, 
having active admins from almost all NITs across India. We know many of you support this initiative on social media, but we
would like to extend our invitation to each one of you to be a
part of this fastest growing community.
</string>

    <string name="about_us">About Us</string>


    <!--============== complete profile strings =================-->
    <string name="personal"> Personal Detail</string>
    <string name="your_state">State/UT</string>
    <string name="your_phone">Phone</string>
    <string name="your_college">College/University</string>
    <string name="degree">Degree (e.g. B.Tech)</string>
    <string name="branch">Branch (e.g. Civil Engineering)</string>
    <string name="education">Education</string>
    <string name="degree_duration">Degree Duration</string>
    <string name="from">From (e.g. 2017)</string>
    <string name="to">To (e.g. 2021)</string>
    <string name="proceed">Proceed</string>
    <string name="skip">Skip</string>

    <!--========= Array Strings ==========-->
    <string-array name="states">
        <item>Uttar Pradesh</item>
        <item>Jammu &amp; Kashmir</item>
        <item>Madhya Pradesh</item>
        <item>Himachal Pradesh</item>
        <item>Laddakh</item>
        <item>Delhi</item>
        <item>Haryana</item>
        <item>Panjab</item>
        <item>Uttarakhand</item>
        <item>Bihar</item>
        <item>Maharastra</item>
        <item>Gujarat</item>
        <item>Rajsthan</item>
        <item>Nagaland</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Tripura</item>
        <item>Chhatis Garh</item>
        <item>Kerla</item>
        <item>Tamilnadu</item>
        <item>Karnataka</item>
        <item>Andhra Pradesh</item>
        <item>Telangana</item>
        <item>Daman Div</item>
        <item>West Bengal</item>
        <item>Puducherry</item>
    </string-array>

    <string-array name="degree">
        <item>B.Tech</item>
        <item>BSc</item>
        <item>M.Tech</item>
        <item>MSc</item>
        <item>PhD</item>
    </string-array>

</resources>
