<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfo"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:layout_above="@id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/app_name"
        android:textSize="30sp"
        android:textColor="@color/textColor1"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:layout_above="@id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_version"
        android:textSize="18sp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textColor1"
        android:text="@string/version"/>

    <ImageView
        android:contentDescription="@string/cnt_desp"
        android:id="@+id/about_app"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:src="@drawable/imnitian"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about_app"
        android:id="@+id/linear_layout"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/ic_copyright_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/company_name"
            android:textSize="17sp"
            android:text="@string/copy_x"
            android:textColor="@color/textColor1"/>

    </LinearLayout>


</RelativeLayout>