<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context=".SignupActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_margin="0dp"
        android:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStartWithNavigation="0dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        />

    <LinearLayout
        android:layout_centerInParent="true"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/msgx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/textColor1"
                android:textSize="35sp"
                android:id="@+id/top_text"
                />

            <TextView
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/textColor1"
                android:layout_below="@id/top_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_signup"
                />

        </RelativeLayout>


        <EditText
        android:stateListAnimator="@null"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hintColor"
        android:fontFamily="@font/work_sans"
        android:inputType="text"
        android:textSize="18sp"
        android:id="@+id/username"
        android:hint="@string/name_hint"
        android:drawableStart="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/myinput"
        android:drawablePadding="10dp"
        android:layout_marginTop="70dp"
        android:autofillHints="" />

    <EditText
        android:stateListAnimator="@null"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hintColor"
        android:fontFamily="@font/work_sans"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="10dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="9dp"
        android:background="@drawable/myinput"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <EditText
        android:stateListAnimator="@null"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/hintColor"
        android:fontFamily="@font/work_sans"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:id="@+id/password"
        android:hint="@string/pass_hint"
        android:drawableStart="@drawable/lock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/myinput"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <Button
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:fontFamily="@font/work_sans_semibold"
        android:textColor="@color/textColor2"
        android:id="@+id/click_to_sign_up"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/mybutton"
        android:layout_marginTop="20dp"
        android:text="@string/signup_space"
        android:textSize="16sp"
        />

    <TextView
        android:textColor="@color/textColor1"
        android:fontFamily="@font/work_sans_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_memeber"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_gravity="center"
        />

    <TextView
        android:fontFamily="@font/work_sans_semibold"
        android:id="@+id/go_to_login"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        />

    </LinearLayout>
</RelativeLayout>