<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_shape"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomSheet"
    android:fitsSystemWindows="true"
    android:padding="30dp"
    app:behavior_hideable="true"
    >
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="18dp"
            android:id="@+id/closeBottomSheet"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/cnt_desp"
            android:src="@drawable/ic_close_orange_24dp"
            />

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/closeBottomSheet"
            android:fontFamily="@font/work_sans_semibold"
            android:text="@string/otp_sent"
            android:textAlignment="center"
            android:textColor="#d2dae2"
            android:textSize="16sp" />

    </RelativeLayout>

    <EditText
        android:stateListAnimator="@null"
        android:textColor="@color/colorAccent"
        android:textColorHint="#A3A2A2"
        android:fontFamily="@font/work_sans"
        android:inputType="number"
        android:maxLength="6"
        android:textSize="18sp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:id="@+id/enterOtp"
        android:hint="@string/otp_hint"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:paddingHorizontal="10dp"
        android:drawableStart="@drawable/otp"
        android:drawablePadding="8dp"
        android:background="@drawable/myinput"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <Button
          android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:fontFamily="@font/work_sans_semibold"
            android:textColor="@color/textColor2"
            android:id="@+id/proceed"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/mybutton"
            android:layout_marginTop="15dp"
            android:text="@string/continue_button"
           android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            tools:targetApi="m"/>
</LinearLayout>
