<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/myRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginOrSignUpActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:paddingStart="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:textColor="@color/textColor1"
                android:textSize="30sp"
                />
        </RelativeLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:elevation="0dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/man_flying_with_books" />

        <Button
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/work_sans_semibold"
            android:layout_marginTop="50dp"
            android:elevation="0dp"
            android:id="@+id/logsignbtn"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/mybutton"
            android:text="@string/login_or_signup"
            android:textColor="@color/textColor2"
            />

       <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
		android:layout_marginTop="10dp"
		>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
       <Button
            android:textAllCaps="false"
            android:onClick="onClick"
	        android:id="@+id/fb"
            android:fontFamily="@font/work_sans_semibold"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
           android:layout_marginStart="5dp"
           android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:background="@drawable/mybutton2"
            android:drawableEnd="@drawable/fbicon_small"
            android:text="@string/facebook"
            android:textColor="#ffffff"/>
    </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/signInGoogle"
                android:onClick="signIn"
                android:textAllCaps="false"
                android:fontFamily="@font/work_sans_semibold"
                android:elevation="0dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/mybutton3"
                android:text="@string/google"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/textColor2"
                android:textSize="16sp"
                android:drawableEnd="@drawable/googleicon_small"/>
            <com.google.android.gms.common.SignInButton
                 android:visibility="gone"
                android:layout_marginTop="10dp"
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </FrameLayout>
    </LinearLayout>
</RelativeLayout>